Fixed background images on iOS devices.

--- a/sass/_media-queries.scss
+++ b/sass/_media-queries.scss
@@ -16,6 +16,14 @@
         width:100%;
         display:block;
     }
+
+    body, html{
+        background: $background-mobile-image no-repeat center center fixed;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: fixed;
+    }
+
 }
 
 .text-danger{
