--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,7 @@
 $text-color: #333;
 $background: #383838;
 $background-image: url(../images/background.png);
+$background-mobile-image: url(http://miningforpotatoes.github.io/images/background.png);
 
 $scrollbar-width: 12px;
 $scrollbar-track: #767676;
